--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,8 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
+Python-venv/bin/
+pyvenv.cfg
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -99,3 +101,18 @@ ENV/
 
 # mypy
 .mypy_cache/
+
+
+# PyCharm
+.idea/
+
+# MacOS
+._*
+.DS_Store
+
+# 一時ファイル／Temporary
+ignore/
+
+# 読み込んだもの／Imported
+
+# 再配布禁止素材／no redistribution source
